assets/css/tailwind.css
/* ... */
::backdrop{
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x:  ;
  --tw-pan-y:  ;
  --tw-pinch-zoom:  ;
  --tw-scroll-snap-strictness: proximity;
  --tw-ordinal:  ;
  --tw-slashed-zero:  ;
  --tw-numeric-figure:  ;
  --tw-numeric-spacing:  ;
  --tw-numeric-fraction:  ;
  --tw-ring-inset:  ;
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgb(59 130 246 / 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
  --tw-shadow-colored: 0 0 #0000;
  --tw-blur:  ;
  --tw-brightness:  ;
  --tw-contrast:  ;
  --tw-grayscale:  ;
  --tw-hue-rotate:  ;
  --tw-invert:  ;
  --tw-saturate:  ;
  --tw-sepia:  ;
  --tw-drop-shadow:  ;
  --tw-backdrop-blur:  ;
  --tw-backdrop-brightness:  ;
  --tw-backdrop-contrast:  ;
  --tw-backdrop-grayscale:  ;
  --tw-backdrop-hue-rotate:  ;
  --tw-backdrop-invert:  ;
  --tw-backdrop-opacity:  ;
  --tw-backdrop-saturate:  ;
  --tw-backdrop-sepia:  ;
}

.absolute{
  position: absolute;
}

.relative{
  position: relative;
}

.right-0{
  right: 0px;
}

.top-0{
  top: 0px;
}

.m-5{
  margin: 1.25rem;
}

.m-3{
  margin: 0.75rem;
}

.mr-40{
  margin-right: 10rem;
}

.mt-10{
  margin-top: 2.5rem;
}

.mb-2{
  margin-bottom: 0.5rem;
}

.mb-0{
  margin-bottom: 0px;
}

.-ml-12{
  margin-left: -3rem;
}

.mt-14{
  margin-top: 3.5rem;
}

.ml-4{
  margin-left: 1rem;
}

.mt-40{
  margin-top: 10rem;
}

.mt-24{
  margin-top: 6rem;
}

.mt-3{
  margin-top: 0.75rem;
}

.mt-5{
  margin-top: 1.25rem;
}

.-mr-10{
  margin-right: -2.5rem;
}

.mt-32{
  margin-top: 8rem;
}

.-mr-5{
  margin-right: -1.25rem;
}

.mb-10{
  margin-bottom: 2.5rem;
}

.mt-4{
  margin-top: 1rem;
}

.mt-44{
  margin-top: 11rem;
}

.ml-20{
  margin-left: 5rem;
}

.mt-7{
  margin-top: 1.75rem;
}

.ml-24{
  margin-left: 6rem;
}

.ml-36{
  margin-left: 9rem;
}

.ml-48{
  margin-left: 12rem;
}

.ml-52{
  margin-left: 13rem;
}

.block{
  display: block;
}

.flex{
  display: flex;
}

.hidden{
  display: none;
}

.h-3\/4{
  height: 75%;
}

.h-screen{
  height: 100vh;
}

.h-3\/5{
  height: 60%;
}

.w-48{
  width: 12rem;
}

.w-full{
  width: 100%;
}

.w-11\/12{
  width: 91.666667%;
}

.w-40{
  width: 10rem;
}

.w-3\/4{
  width: 75%;
}

.w-2\/3{
  width: 66.666667%;
}

.w-1\/3{
  width: 33.333333%;
}

.w-screen{
  width: 100vw;
}

.w-1\/2{
  width: 50%;
}

.max-w-full{
  max-width: 100%;
}

.rotate-90{
  --tw-rotate: 90deg;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.cursor-pointer{
  cursor: pointer;
}

.snap-y{
  scroll-snap-type: y var(--tw-scroll-snap-strictness);
}

.snap-start{
  scroll-snap-align: start;
}

.flex-col{
  flex-direction: column;
}

.items-stretch{
  align-items: stretch;
}

.justify-end{
  justify-content: flex-end;
}

.justify-center{
  justify-content: center;
}

.justify-between{
  justify-content: space-between;
}

.gap-1{
  gap: 0.25rem;
}

.gap-5{
  gap: 1.25rem;
}

.gap-2{
  gap: 0.5rem;
}

.gap-14{
  gap: 3.5rem;
}

.gap-10{
  gap: 2.5rem;
}

.gap-4{
  gap: 1rem;
}

.overflow-scroll{
  overflow: scroll;
}

.border{
  border-width: 1px;
}

.border-\[\#E04747\]{
  --tw-border-opacity: 1;
  border-color: rgb(224 71 71 / var(--tw-border-opacity));
}

.border-white{
  --tw-border-opacity: 1;
  border-color: rgb(255 255 255 / var(--tw-border-opacity));
}

.border-\[\#e04747\]{
  --tw-border-opacity: 1;
  border-color: rgb(224 71 71 / var(--tw-border-opacity));
}

.bg-\[\#282424\]{
  --tw-bg-opacity: 1;
  background-color: rgb(40 36 36 / var(--tw-bg-opacity));
}

.bg-black{
  --tw-bg-opacity: 1;
  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
}

.bg-\[\#362F2F\]{
  --tw-bg-opacity: 1;
  background-color: rgb(54 47 47 / var(--tw-bg-opacity));
}

.p-2{
  padding: 0.5rem;
}

.p-4{
  padding: 1rem;
}

.py-10{
  padding-top: 2.5rem;
  padding-bottom: 2.5rem;
}

.py-4{
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.px-7{
  padding-left: 1.75rem;
  padding-right: 1.75rem;
}

.pl-9{
  padding-left: 2.25rem;
}

.pt-5{
  padding-top: 1.25rem;
}

.pb-10{
  padding-bottom: 2.5rem;
}

.pt-2{
  padding-top: 0.5rem;
}

.pb-5{
  padding-bottom: 1.25rem;
}

.pb-6{
  padding-bottom: 1.5rem;
}

.pt-3{
  padding-top: 0.75rem;
}

.pb-20{
  padding-bottom: 5rem;
}

.pl-2{
  padding-left: 0.5rem;
}

.pb-7{
  padding-bottom: 1.75rem;
}

.pt-16{
  padding-top: 4rem;
}

.pt-14{
  padding-top: 3.5rem;
}

.pt-20{
  padding-top: 5rem;
}

.pt-12{
  padding-top: 3rem;
}

.pt-24{
  padding-top: 6rem;
}

.pl-10{
  padding-left: 2.5rem;
}

.text-center{
  text-align: center;
}

.font-body{
  font-family: Roboto;
}

.text-xl{
  font-size: 1.25rem;
  line-height: 1.75rem;
}

.text-7xl{
  font-size: 4.5rem;
  line-height: 1;
}

.text-2xl{
  font-size: 1.5rem;
  line-height: 2rem;
}

.text-lg{
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.font-black{
  font-weight: 900;
}

.font-medium{
  font-weight: 500;
}

.leading-tight{
  line-height: 1.25;
}

.leading-loose{
  line-height: 2;
}

.text-\[\#FFFFFF\]{
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.text-gray-300{
  --tw-text-opacity: 1;
  color: rgb(209 213 219 / var(--tw-text-opacity));
}

.text-\[\#E04747\]{
  --tw-text-opacity: 1;
  color: rgb(224 71 71 / var(--tw-text-opacity));
}

.text-white{
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.text-\[\#e04747\]{
  --tw-text-opacity: 1;
  color: rgb(224 71 71 / var(--tw-text-opacity));
}

.text-\[\#BD4141\]{
  --tw-text-opacity: 1;
  color: rgb(189 65 65 / var(--tw-text-opacity));
}

.text-\[\#bd4141\]{
  --tw-text-opacity: 1;
  color: rgb(189 65 65 / var(--tw-text-opacity));
}

.display-none{
  display: none;
}

.dark .dark\:block{
  display: block;
}
/* ... */

